@@ -5,10 +5,31 @@
     <artifactId>GYMLife1</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+<<<<<<< HEAD
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
         <exec.mainClass>com.ituhn.pemkom2.MainApp</exec.mainClass>
+=======
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>21</maven.compiler.release>
+        <exec.mainClass>GUII.admin</exec.mainClass>
+>>>>>>> aspa
     </properties>
      <dependencies>
         <!-- Driver NoSQL MongoDB (Pertemuan 5) -->
@@ -18,6 +39,7 @@
             <version>5.0.0</version>
         </dependency>
 <<<<<<< HEAD
+<<<<<<< HEAD
         
         <!-- Library FlatLaf -->
         <dependency>
@@ -25,10 +47,15 @@
             <artifactId>flatlaf</artifactId>
             <version>3.4.1</version>
 =======
+=======
+>>>>>>> aspa
          <dependency>
             <groupId>com.fazecast</groupId>
             <artifactId>jSerialComm</artifactId>
             <version>2.10.4</version>
+<<<<<<< HEAD
+>>>>>>> aspa
+=======
 >>>>>>> aspa
         </dependency>
      </dependencies>
